<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bricks On Grid</string>
    <string name="app_name_on_splash">BRICKS\nON GRID</string>
    <string name="title_activity_main_menu">Bricks On Grid</string>
    <string name="btn_new_game">New Game</string>
    <string name="app_title">BRICKS ON GRID</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_instructions">Instructions</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_credits">Credits</string>
    <string name="title_activity_game">Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_instruction">Instructions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_credits">Credits</string>
    <string name="whose_turn">Your turn!</string>
    <string name="you_score">Red\'s score:</string>
    <string name="rival_score">Blue\'s score:</string>
    <string name="initial_score">0</string>
    <string name="blocked_tile">Blocked tile:</string>
    <string name="ambient_music">Ambient music:</string>
    <string name="sound_effect">Sound effect:</string>
    <string name="ai_rival">AI Rival:</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="classic_mode">Classic mode:</string>
    <string name="player_name">Your name:</string>
    <string name="hint_name">Type your name</string>
    <string name="your_turn">Your turn!</string>
    <string name="rival_turn">My turn</string>
    <string name="dimension">Dimension</string>
    <string name="dimension_hint">3 to 9</string>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string-array name="ai_hints_and_taunts">
        <item>You are good at this!</item>
        <item>I am gonna win no matter how well you play!</item>
        <item>Is that all you\'ve got?</item>
        <item>Are you playing seriously?</item>
        <item>Do you really think you can beat me?</item>
        <item>Let me give you an advice, never trust an AI.</item>
        <item>Seriously, humans are so predictable.</item>
        <item>Believe me, I was a human once.</item>
        <item>A wise man once told me, winning is in my electricity!</item>
        <item>To place a brick touch and drag your finger to connect two adjacent cells. Any two cells are called adjacent if they share a common edge.</item>
    </string-array>
    <string name="lbl_instruction">
        Select new game for start a new game.\n\n

        To place a brick touch and drag your finger to connect two adjacent cells. Any two cells are called adjacent if they share a common edge.\n\n

        In the settings you can set the preferred settings of yours.\n
        Name: Type your name if you want.\n
        Dimensions: The dimension of the grid you want to play in.\n
        Max blocked tile: Maximum number of blocked tiles you want the grid should have. It will generate automatically for you. It don\'t allow you to enter blocked tile greater than the total cells. Setting every tile as blocked will result in end of game at the start.\n
        Music: On/Off the ambient music\n
        Sound: On/Off the sound effect on click or placing bricks on grid.\n
        AI: On/Off the AI. Off the AI for a human vs. human game.\n
        Classic: Keep it on if you want classic game mode on. Otherwise keep it off.\n\n

        Classic mode: Players have to place bricks on the grid. The last player able to place a brick on the grid until the grid is full will win the game.\n
        Non Classic mode: Players have to place bricks on the grid. Placing bricks will give 2 points to the player who places it. For every adjacent tiles having own bricks will give the player additional 1 point. Player having the highest points after the grid is full will win the game.\n\n

        Have fun!
    </string>
    <string name="lbl_credits">
        \n\nBrought to you by:\n\n

        Sazedul Islam\n
        Shantanu Mondol\n\n

        A Bachelor House production
    </string>
    <string name="winner">Winner!</string>
    <string name="loser">Loser!</string>
    <string name="try_again">Tap to try again…</string>
    <string name="play_again">Tap to play again…</string>
    <string name="red_turn">Red\'s turn!</string>
    <string name="blue_turn">Blue\'s turn!</string>
    <string name="welcome">Welcome!</string>
    <string name="difficulty">Difficulty</string>
    <string name="blocked_tile_hint"><![CDATA[<= Number of cells/2]]></string>
    <string name="hints">Good Luck!</string>

</resources>
