<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context="com.shakeme.sazedul.games.bricksongrid.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099cc"
        android:orientation="vertical">

        <TextView
            android:paddingTop="@dimen/abc_action_bar_stacked_max_height"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="@dimen/main_menu_title"
            android:textStyle="bold"
            android:textColor="@color/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingBottom="@dimen/title_bottom"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/action_settings"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/player_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_name"
                android:background="@color/black_overlay"
                android:textColor="@color/white"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/dimension"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_dim"
                android:background="@color/black_overlay"
                android:textColor="@color/white"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/dimension_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/blocked_tile"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_blocked_tile"
                android:background="@color/black_overlay"
                android:textColor="@color/white"
                android:hint="@string/blocked_tile_hint"
                android:inputType="number"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/music_enabled"
                android:text="@string/ambient_music"
                android:checked="true"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/sound_enabled"
                android:text="@string/sound_effect"
                android:checked="true"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/ai_enabled"
                android:text="@string/ai_rival"
                android:checked="true"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/classic_enabled"
                android:text="@string/classic_mode"
                android:checked="true"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_all"
            android:paddingLeft="@dimen/padding_all"
            android:paddingRight="@dimen/padding_all"
            android:paddingBottom="@dimen/padding_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBar"
            android:orientation="horizontal">

            <Button
                android:text="@string/btn_ok"
                style="@style/ButtonBarButton"
                android:onClick="saveSettings"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/btn_cancel"
                style="@style/ButtonBarButton"
                android:onClick="exitActivity"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>