<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_game"
    android:background="#0099cc"
    android:keepScreenOn="true"
    tools:context="com.shakeme.sazedul.games.bricksongrid.GameActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/title_activity_main_menu"
            android:gravity="center"
            android:textColor="@color/title"
            android:textSize="@dimen/main_menu_title"
            android:padding="@dimen/padding_all"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/your_score"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/you_score"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_your_score"
                android:text="@string/initial_score"
                android:textColor="@color/red"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rival_score"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/rival_score"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_rival_score"
                android:text="@string/initial_score"
                android:textColor="@color/blue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <com.shakeme.sazedul.games.bricksongrid.util.GameView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridView"
        android:numColumns="8"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/your_turn"
            android:text="@string/your_turn"
            android:gravity="center_horizontal"
            android:textColor="@color/red"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/rival_turn"
            android:text="@string/rival_turn"
            android:gravity="center_horizontal"
            android:textColor="@color/blue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
